tests/compile_fail/invalid_custom_property_struct_literal.stderr
error[E0451]: fields `authored`, `references`, `dependencies` and `typed_values` of struct `surgeist_style::CustomPropertyValue` are private
 --> tests/compile_fail/invalid_custom_property_struct_literal.rs:5:9
  |
4 |     let _value = CustomPropertyValue {
  |                  ------------------- in this type
5 |         authored: AuthoredTokens::new("8px"),
  |         ^^^^^^^^ private field
6 |         references: Vec::new(),
  |         ^^^^^^^^^^ private field
7 |         dependencies: Vec::new(),
  |         ^^^^^^^^^^^^ private field
8 |         typed_values: std::collections::BTreeMap::new(),
  |         ^^^^^^^^^^^^ private field
